# bpaf

./: .gitignore  Cargo.toml  Changelog.md  Compare.md  README.md  TODO  crates.js  help.html  search-index.js  settings.html  src-files.js  tarp.sh
bpaf/: all.html  derive.Bpaf.html  enum.ParseFailure.html  enum.ShellComp.html  fn.any.html  fn.appname.html  fn.choice.html  fn.env.html  fn.fail.html  fn.literal.html  fn.long.html  fn.positional.html  fn.pure.html  fn.pure_with.html  fn.short.html  index.html  macro.construct!.html  macro.construct.html  sidebar-items.js  struct.Args.html  struct.Doc.html  struct.OptionParser.html  trait.Parser.html
bpaf_cauwugo/: Cargo.toml  README.md
bpaf_cauwugo/src/: add.rs  build.rs  check.rs  clean.rs  lib.rs  main.rs  metadata.rs  opts.rs  run.rs  shared.rs  test.rs
bpaf_core/: Cargo.toml
bpaf_derive/: Cargo.toml  README.md
bpaf_derive/src/: attrs.rs  custom_path.rs  field.rs  field_tests.rs  help.rs  kw.rs  lib.rs  named_field.rs  td.rs  top.rs  top_tests.rs  utils.rs
bpaf_derive/src/field/: named_field.rs  req_flag.rs
comptester/: Cargo.toml  build.rs
comptester/src/: lib.rs  vterm.rs
comptester/tests/: coreutils.rs  derive_show_asm.rs  simple_dynamic.rs
docs/: Cargo.toml  build.rs
docs/__/_1_tutorials/_1_combinatoric_api/: index.md
docs/__/_1_tutorials/_1_combinatoric_api/_0_simple_parser/_1_argument/: index.md
docs/__/_1_tutorials/_1_combinatoric_api/_0_simple_parser/_2_positional/: index.md
docs/__/_1_tutorials/_1_combinatoric_api/_2_combining/: index.md
docs/__/_1_tutorials/_2_derive_api/: index.md
docs/__/_1_tutorials/_2_derive_api/_1_custom_names/: index.md
docs/__/_1_tutorials/_2_derive_api/_2_custom_consumers/: index.md
docs/__/_1_tutorials/_2_derive_api/_6_nesting/: index.md
docs/__/_1_tutorials/_2_derive_api/_8_cargo/: index.md
docs/__/_1_tutorials/_3_picking_type/: index.md
docs/_todo/theory/: index.md
docs/data/: adjacent_argument.md  adjacent_command.md  adjacent_struct_0.md  adjacent_struct_1.md  adjacent_struct_3.md  adjacent_struct_4.md  argument.md  choice.md  collect.md  collect_catch.md  count.md  env.md  flag.md  intro.md  literal.md  long_alias.md  many.md  many1.md  many1_catch.md  many_catch.md  map.md  optional_catch.md  pos_help.md  positional.md  pure.md  pure_with.md  req_flag.md  short.md  short_alias.md  switch.md  switch_help.md
docs/data/combinatoric_api/: _00_intro.md  _01_switch.md  _02_argument.md  _03_positional.md  _10_chaining.md  _20_combining.md  _21_flag.md  _22_errors.md  _23_req_flag.md  _24_any.md  _25_any2.md  _30_subcommands.md
docs/data/cookbook/: _00_index.md  _01_find.md  _02_find2.md  _03_dd.md  _04_xorg.md  _05_xorg.md  _06_command_chaining.md  _07_multi_value_arg.md  _08_structure_groups.md  _09_skipping_positional.md
docs/data/derive_api/: _00_index.md  _01_intro.md  _02_custom_names.md  _03_custom_consumers.md  _04_postpr.md  _05_enums_and_structs.md  _06_generate.md  _07_nesting.md  _08_commands.md
docs/data/goals/: index.md
docs/data/intro/: index.md
docs/data/picking_type/: index.md
docs/data/shell_completion/: index.md
docs/data/testing/: index.md
docs/data/types_of_arguments/: _0_intro.md  _1_switch.md  _2_argument.md  _3_positional.md  _4_command.md  _5_exotic.md  index.md
docs/src/: lib.rs  main.rs
docs/src/adjacent_0/: cases.txt  combine.rs  derive.rs
docs/src/adjacent_1/: cases.txt  combine.rs
docs/src/adjacent_2/: cases.txt  combine.rs
docs/src/adjacent_3/: cases.txt  combine.rs
docs/src/adjacent_4/: cases.txt  combine.rs
docs/src/any/: cases.txt  combine.rs  derive.rs
docs/src/anywhere/: cases.txt  combine.rs
docs/src/anywhere_1/: cases.txt  combine.rs  derive.rs
docs/src/argument/: cases.txt  combine.rs  derive.rs
docs/src/boxed/: cases.txt  combine.rs
docs/src/cargo_helper/: cases.txt  derive.rs
docs/src/catch/: cases.txt  combine.rs  derive.rs
docs/src/command/: cases.txt  combine.rs  derive.rs
docs/src/dd/: cases.txt  example.rs
docs/src/fallback/: cases.txt  combine.rs  derive.rs
docs/src/fallback_with/: cases.txt  combine.rs  derive.rs
docs/src/find/: cases.txt  example.rs
docs/src/flag/: cases.txt  combine.rs  derive.rs
docs/src/group_help/: cases.txt  combine.rs  derive.rs
docs/src/guard/: cases.txt  combine.rs  derive.rs
docs/src/hide/: cases.txt  combine.rs  derive.rs
docs/src/hide_usage/: cases.txt  combine.rs
docs/src/many/: cases.txt  combine.rs  derive.rs
docs/src/map/: cases.txt  combine.rs
docs/src/numeric_prefix/: cases.txt  example.rs
docs/src/optional/: cases.txt  combine.rs  derive.rs
docs/src/os/: cases.txt  combine.rs  derive.rs
docs/src/parse/: cases.txt  combine.rs  derive.rs
docs/src/pos_adjacent/: cases.txt  combine.rs
docs/src/positional/: cases.txt  combine.rs  derive.rs
docs/src/req_flag/: cases.txt  combine.rs  derive.rs
docs/src/short_long_env/: cases.txt  combine.rs
docs/src/some/: cases.txt  combine.rs  derive.rs
docs/src/switch/: cases.txt  combine.rs  derive.rs
docs/src/xorg/: cases.txt  example.rs
docs2/: Cargo.toml  README.md  build.rs
documentation/: Cargo.toml
examples/: README.md  after_help.rs  app_name.rs  at_least_two.rs  basic.rs  cargo-cmd.rs  cat.rs  compression.rs  confusing.rs  coreutils.rs  csample.rs  custom_usage.rs  customize_help.rs  dd.rs  derive-smart-pointer.rs  derive.rs  derive_commands.rs  derive_rudo.rs  derive_rudo_no_import.rs  derive_show_asm.rs  derive_this_or_that.rs  dynamic-tree.rs  dynamic.rs  enum_in_args.rs  enum_in_args_with_strum.rs  enum_tuple.rs  env_logger.rs  env_variable.rs  fallback_command.rs  filenames.rs  find.rs  flatten.rs  foo.rs  git.rs  main.rs  many_comma_separated_args.rs  many_comma_separated_args_derive.rs  multiple_fallback.rs  negative.rs  no_import.rs  (+15 more)
legacy/: Cargo.toml
legacy/src/: main.rs
md-eval/: Cargo.toml
md-eval/data/: sample.md
md-eval/src/: document.rs  entry.rs  lib.rs  main.rs  md.rs  module.rs  runner.rs  types.rs
search.index/: 00605ae8b7b2.js  007c9ae3cb86.js  00ed3a33dd40.js  02b4577531ed.js  03fe2b2bf8d4.js  0556c2fbf6df.js  (+83 more)
(+704 files in other folders)
