[package]
name = "bpaf"
version = "0.8.1"
edition = "2021"
categories = ["command-line-interface"]
description = "A simple Command Line Argument Parser with parser combinators"
keywords = ["args", "arguments", "cli", "parser", "parse"]
authors = [ "Michael Baykov <manpacket@gmail.com>" ]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacak/bpaf"
rust-version = "1.56"
exclude = [".github/workflows", "tarp.sh"]


[dependencies]
bpaf_derive = { path = "./bpaf_derive", version = "=0.5.0", optional = true }
owo-colors = { version = "3.5.0", default-features = false, optional = true }
supports-color = { version = "2.0.0", optional = true }

[dev-dependencies]
bpaf = { path = ".",  features = ["derive", "extradocs", "autocomplete", "docgen", "batteries", "dull-color"] }


[package.metadata.docs.rs]
features = ["derive", "extradocs", "autocomplete", "batteries"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]


[features]
derive = ["bpaf_derive"]
extradocs = []
batteries = []
autocomplete = []
# this feature used internally to switch between different code generation,
# users should pick between bright-color or dull-color
color = ["supports-color", "owo-colors"]
bright-color = ["color"]
dull-color = ["color"]
docgen = []

[[test]]
name = "completion"
required-features = ["autocomplete"]

[[test]]
name = "derive"
required-features = ["derive"]

[[test]]
name = "batteries"
required-features = ["batteries"]

[[example]]
name = "csample"
required-features = ["autocomplete"]

[workspace]
members = [".", "./bpaf_derive", "./bpaf_cauwugo", "docs2", "comptester"]

[workspace.metadata.cauwugo]
bpaf = true
