[package]
name = "bpaf"
version = "0.9.22"
edition = "2021"
categories = ["command-line-interface"]
description = "A simple Command Line Argument Parser with parser combinators"
keywords = ["args", "arguments", "cli", "parser", "parse"]
authors = [ "Michael Baykov <manpacket@gmail.com>" ]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacak/bpaf"
rust-version = "1.68"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "examples/**/*"
]


[dependencies]
bpaf_derive = { path = "./bpaf_derive", version = "=0.5.21", optional = true }
owo-colors = { version = ">=3.5, <5.0", default-features = false, optional = true }
supports-color = { version = ">=2.0.0, <4.0", optional = true }

[dev-dependencies]
bpaf = { path = ".",  features = ["derive", "extradocs", "autocomplete", "docgen", "batteries", "dull-color"] }


[package.metadata.docs.rs]
features = ["unstable-docs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition"]


[features]
derive = ["bpaf_derive"]
extradocs = []
batteries = []
autocomplete = []
# this feature used internally to switch between different code generation,
# users should pick between bright-color or dull-color
color = ["supports-color", "owo-colors"]
bright-color = ["color"]
dull-color = ["color"]
docgen = []

# this feature is used for local development to make it easier to generate documentation
unstable-docs = ["derive", "extradocs", "autocomplete", "batteries", "docgen"]

[workspace.metadata.cauwugo]
bpaf = true

[workspace]
members =  [
    ".",
    "./bpaf_derive",
    "./bpaf_cauwugo",
    "./docs2",
    "./comptester",
    "./documentation",
]
