[package]
name = "bpaf_derive"
version = "0.2.1"
edition = "2021"
categories = ["command-line-interface"]
description = "Derive macros for bpaf Command Line Argument Parser"
keywords = ["args", "arguments", "cli", "parser", "parse"]
authors = [ "Michael Baykov <manpacket@gmail.com>" ]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacak/bpaf"

[lib]
name = "bpaf_derive"
proc-macro = true

[dependencies]
syn = { version = "1.0.73", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"
