[package]
name = "bpaf_derive"
version = "0.5.7"
edition = "2018"
categories = ["command-line-interface"]
description = "Derive macros for bpaf Command Line Argument Parser"
keywords = ["args", "arguments", "cli", "parser", "parse"]
authors = ["Michael Baykov <manpacket@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacak/bpaf"

[lib]
name = "bpaf_derive"
proc-macro = true

[dependencies]
syn = { version = "2.0.2", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"

[dev-dependencies]
pretty_assertions = "1.3"
