[package]
name = "comptester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vte = { version = "0.11.1", default-features = true, features = ["ansi"] }
ptyprocess = "0.4.1"
anyhow = "1.0.71"

[dev-dependencies]
pretty_assertions = "1.3"
