[package]
name = "docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { path = "../" }
md-eval = { path = "../md-eval" }

[build-dependencies]
md-eval = { path = "../md-eval" }

[profile.dev.build-override]
opt-level = 3
