[package]
name = "legacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { path = "../", features = ["derive", "autocomplete", "dull-color", "docgen"] }
bpaf_derive = { path = "../bpaf_derive" }
rustix = "=0.37.19"
linux-raw-sys = "=0.3.8"
is-terminal = "=0.4.7"

[workspace]
