[package]
name = "legacy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { path = "../", features = ["derive", "autocomplete", "docgen"] }
bpaf_derive = { path = "../bpaf_derive" }

[workspace]
