[package]
name = "md-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bpaf = { version = "0.9.4", features = ["dull-color", "derive"] }
comrak = { version = "0.18", default-features = false }
prettyplease = "0.2"
shell-words = "1.1.0"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }

